style: fix popover and body overflow (#216)

--- a/src/assets/style/global.less
+++ b/src/assets/style/global.less
@@ -55,6 +55,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
   font-weight: 400;
   font-size: 12px;
   font-family: 'Open Sans', -apple-system, BlinkMacSystemFont, 'PingFang SC', 'noto sans', sans-serif !important;
@@ -344,6 +345,7 @@ body {
 
 .arco-popover-popup-content {
   padding: 6px 16px;
+  border-radius: 6px;
 }
 
 .width-35 {
